fixed flex properties so that any number of boxes scales size automatically. Also editied gaps and borders, plus button functionality.

--- a/style.css
+++ b/style.css
@@ -7,25 +7,25 @@ html {
 }
 
 .divBox {
-    width: 50px;
-    height: 1000px;
     display: flex;
     flex-direction: column;
-    gap: 5px;
+    gap: 0px;
+    flex: 1; /* come back to comment through all flex property uses */
+    height: 1000px;
 }
 
 .div {
-    height: 50px;
-    width: 50px;
     border: 1px solid lightgray;
     border-radius: 10%;
+    flex: 1;
 }
 
 #container {
     display: flex;
-    gap: 5px;
-    margin-left: auto;
-    margin-right: auto;
+    gap: 0px;
+    height: 1000px;
+    width: 1000px;
+    flex-basis: 0;
 }
 
 .hovered {
@@ -36,4 +36,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+button {
+    margin-bottom: 20px;
 }
